--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+body, html {
+    height: 100%;
+}
+
 body {
     background-color: #000;
     background-image: url(./img/bg.png);
@@ -10,7 +14,7 @@ body {
 }
 
 .fightarea {
-    display: flex;
+    display: none;
     gap: 20px;
 }
 
@@ -37,6 +41,7 @@ body {
     overflow-y: scroll;
     border-radius: 20px;
     background-color: #CCC;
+    display: none;
 }
 
 .attackButton {
@@ -64,4 +69,49 @@ body {
 .log li{
     list-style-type: none;
     margin-top: 10px;
+}
+
+.char-select-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.char-pannel select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-family: sans-serif;
+    border-radius: 10px;
+    text-align: center;
+    border: 1px solid black;
+}
+
+.char-name input {
+    width: 200px;
+    padding: 8px;
+    margin-bottom: 20px;
+    font-size: 18px;
+    font-family: sans-serif;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+.start-button {
+    width: 100%;
+    padding: 8px;
+    font-size: 18px;
+    font-family: sans-serif;
+    border-radius: 10px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+
+input::placeholder {
+    color: grey;
+    font-size: 18px;
+    text-align: center;
 }
